--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:28.0.0'
     compile 'com.android.support:design:28.0.0'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':showcase')
+   // compile project(path: ':showcase')
+    compile project(path: ':showcaseTutorialSnashLib')
 }
